--- a/MyPartyCore/Resources/ViewComponents/PartiesListViewComponent.en.resx
+++ b/MyPartyCore/Resources/ViewComponents/PartiesListViewComponent.en.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="NameLastListParties" xml:space="preserve">
-    <value>The 5 most recently viewed party parties:</value>
+    <value>5 last viewed parties:</value>
   </data>
   <data name="NameTenListParties" xml:space="preserve">
     <value>10 upcoming parties:</value>
