--- a/MyPartyCore/Resources/ViewModels/PartyParticipants.ru.resx
+++ b/MyPartyCore/Resources/ViewModels/PartyParticipants.ru.resx
@@ -117,16 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Close" xml:space="preserve">
-    <value>Закрыть</value>
+  <data name="ArrivalDate" xml:space="preserve">
+    <value>Время прибытия</value>
   </data>
-  <data name="Photo" xml:space="preserve">
-    <value>Фото</value>
-  </data>
-  <data name="Title" xml:space="preserve">
-    <value>Список участников:</value>
-  </data>
-  <data name="Vote" xml:space="preserve">
-    <value>Проголосовать</value>
+  <data name="Name" xml:space="preserve">
+    <value>Имя</value>
   </data>
 </root>
