--- a/MyPartyCore/Resources/Views/Party/Index.en.resx
+++ b/MyPartyCore/Resources/Views/Party/Index.en.resx
@@ -120,6 +120,9 @@
   <data name="Close" xml:space="preserve">
     <value>Close</value>
   </data>
+  <data name="Photo" xml:space="preserve">
+    <value>Photo</value>
+  </data>
   <data name="Title" xml:space="preserve">
     <value>List of participants:</value>
   </data>
