--- a/MyPartyCore/Resources/Views/Account/Register.en.resx
+++ b/MyPartyCore/Resources/Views/Account/Register.en.resx
@@ -121,6 +121,6 @@
     <value>Create</value>
   </data>
   <data name="Title" xml:space="preserve">
-    <value>New User Registration</value>
+    <value>Register</value>
   </data>
 </root>
