--- a/MyPartyCore/Resources/Views/Account/Login.en.resx
+++ b/MyPartyCore/Resources/Views/Account/Login.en.resx
@@ -121,6 +121,6 @@
     <value>Login</value>
   </data>
   <data name="Title" xml:space="preserve">
-    <value>Login to the application</value>
+    <value>Login</value>
   </data>
 </root>
