--- a/MyPartyCore/Resources/Views/Account/Login.ru.resx
+++ b/MyPartyCore/Resources/Views/Account/Login.ru.resx
@@ -121,6 +121,6 @@
     <value>Войти</value>
   </data>
   <data name="Title" xml:space="preserve">
-    <value>Вход в приложение</value>
+    <value>Вход</value>
   </data>
 </root>
