--- a/MyPartyCore/Resources/Views/Account/Register.en.resx
+++ b/MyPartyCore/Resources/Views/Account/Register.en.resx
@@ -120,6 +120,9 @@
   <data name="Create" xml:space="preserve">
     <value>Create</value>
   </data>
+  <data name="or" xml:space="preserve">
+    <value>or</value>
+  </data>
   <data name="Title" xml:space="preserve">
     <value>Register</value>
   </data>
